--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -1,14 +1,18 @@
 schema:
-  - protocol/aggregation.graphqls
-  - protocol/alarm.graphqls
-  - protocol/common.graphqls
-  - protocol/log.graphqls
-  - protocol/metadata.graphqls
-  - protocol/metric.graphqls
-  - protocol/top-n-records.graphqls
-  - protocol/topology.graphqls
-  - protocol/trace.graphqls
+  - common.graphqls
+  - aggregation.graphqls
+  - alarm.graphqls
+  - log.graphqls
+  - metadata.graphqls
+  - metric.graphqls
+  - top-n-records.graphqls
+  - topology.graphqls
+  - trace.graphqls
 exec:
   filename: generated.go
 model:
   filename: models_gen.go
+resolver:
+  filename: resolver.go
+  type: Resolver
+autobind: []
